fixes responsive, active states

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <input placeholder="Email address" />
           <button>Request access</button>
         </form>
+        <p class="alert-message"></p>
         <div class="logo-row">
           <img src="./assets/desktop/spotify.svg" />
           <img src="./assets/desktop/apple-podcast.svg" alt="" />
@@ -49,3 +50,4 @@
     />
   </body>
 </html>
+<script src="app.js"></script>
