js events added

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
           and more!
         </p>
         <form action="/">
-          <input placeholder="Email address" />
-          <button>Request access</button>
+          <label name="email"></label>
+          <input name="email" id="email" placeholder="Email address" />
+          <button type="submit">Request access</button>
         </form>
         <p class="alert-message"></p>
         <div class="logo-row">
